# obstacle_avoidance

./: LICENSE  README.md  READ_ME.md  TEST_ME.md
controller_test/src/: NEO.py  Neo_ros_noetic.py  QP.py  constraint.py  objective.py  test_data_pub.py
dynamic_obstacle/: CMakeLists.txt  package.xml
dynamic_obstacle/include/: obstacle_publisher.h
dynamic_obstacle/launch/: dynamic_obstacle.launch
dynamic_obstacle/src/: obstacle_publisher.cpp  obstacle_publisher_node.cpp  obstacle_publisher_node__.cpp
franka_ros/franka_control/config/: franka_control_node.yaml  panda_arm_controller.yaml
franka_ros/franka_control/launch/: franka_control.launch  panda_control.launch
franka_ros/franka_example_controllers/include/franka_example_controllers/: joint_velocity_example_controller.h
franka_ros/franka_example_controllers/src/: joint_velocity_example_controller.cpp
franka_ros/franka_gazebo/config/: sim_controllers.yaml
franka_ros/franka_gazebo/launch/: panda.launch  robot.launch
franka_ros/franka_gazebo/world/: neo.world
gazebo_panda/config/: panda_sim_controllers.yaml
gazebo_panda/launch/: panda_sim_controllers.launch  simple_world.launch
hand_detection/: CMakeLists.txt  package.xml
hand_detection/launch/: azure_driver.launch  cam0.launch  hand_detection.launch
hand_detection/msg/: ImageWithRectangles.msg  Rectangle.msg
hand_detection/src/: hand_detection_node.py  point_generator.py
neo_controller/: CMakeLists.txt  package.xml
neo_controller/src/: NEO.py  QP.py  constraint.py  example.py  objective.py
(+3 files in other folders)
