<?xml version="1.0"?>
<package format="2">
  <name>hand_detection</name>
  <version>0.0.0</version>
  <description>The hand_detection package</description>

  <maintainer email="janghoon0514@g.skku.edu">Janghoon</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>mediapipe</exec_depend>
  <exec_depend>opencv-python</exec_depend>
</package>